# meaty-beatdown

./: .dependency-cruiser.cjs  .gitattributes  .gitignore  CLAUDE.md  NOTES.md  README.md  eslint.config.js  justfile  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: exploration.md  frame_rpg_spec.md  fsm.md  implementation-plan.md  mechanics-gap-analysis.md  mechanics.md  progression.md  tech-plan.md  the-promise-plot-bible.md  vision-mda.md
docs/archive/: mechanics-gap-analysis.md  mechanics.md
golden/: block.json  counter-hit.json  governor-ap.json  governor-focus.json  governor-hitstun.json  governor-juggle.json  parry.json  reza-borin.json  sidestep-ap.json  sidestep-homing.json  sidestep-linear.json  throw-tech.json  throw.json
notes/: 00-state-assessment.md  01-decisions.md  02-final-answers.md  03-library-policy.md  04-phase-5-implementation-decisions.md  README.md
rust/: .gitignore  Cargo.toml  DESIGN.md  README.md  rust-toolchain.toml
rust/app/: Cargo.toml
rust/app/src/: combat.rs  debuglog.rs  exploration.rs  lib.rs  main.rs  render.rs
rust/app/src/state/: actor.rs  app.rs  combat.rs  exploration.rs  game.rs  mod.rs  pause.rs
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs  trace.rs
rust/engine/src/combat/: agents.rs  entity.rs  forecast.rs  mod.rs  observe.rs  resolve.rs  schedule.rs  sim.rs  spatial.rs
rust/engine/src/content/: attributes.rs  audit.rs  compile.rs  equipment.rs  generate.rs  mod.rs  morphology.rs  moves.rs  sheet.rs
rust/engine/src/core/: fx.rs  ids.rs  mod.rs  rng.rs  tick.rs
rust/engine/src/data/: arena.rs  defense.rs  hit.rs  ids.rs  knowledge.rs  mod.rs  movedef.rs  ruleset.rs
rust/engine/src/exploration/: encounter.rs  hex.rs  mod.rs  poi.rs  terrain.rs  travel.rs  world.rs  worldgen.rs
rust/engine/src/fighting/: config.rs  entity.rs  frame.rs  mod.rs  regime.rs  resolver.rs  sim.rs  space.rs
rust/engine/tests/: audit.rs  combo.rs  determinism.rs  duel.rs  escalation.rs  fog.rs  governors_prop.proptest-regressions  governors_prop.rs  party.rs
rust/engine/tests/common/: mod.rs
rust/engine/tests/data/: probe_trace.json
src/balance/: audit.ts  budget.test.ts  budget.ts
src/cli/: agents.ts  fight.ts  timeline.ts
src/content/: builders.ts  sample.ts
src/core/: assert-never.test.ts  config.ts  cost.ts  engine.test.ts  engine.ts  entity.test.ts  entity.ts  fixed.test.ts  fixed.ts  frameprofile.test.ts  frameprofile.ts  ids.ts  regime.ts  resolver.test.ts  (+3 more)
ts/: .dependency-cruiser.cjs  CLAUDE.md  PORTING.md  README.md  eslint.config.js  justfile
(+42 files in other folders)
