[workspace]
resolver = "3"
members = ["engine", "app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[workspace.dependencies]
# Library policy (tech-plan §1.1): math and infrastructure come from crates;
# bespoke code is reserved for the domain itself.
fixed = { version = "1", features = ["serde"] }
cordic = "0.1"
fastrand = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
# The sim is integer math; debug assertions stay cheap and catch overflow.
overflow-checks = true
