[package]
name = "app"
version.workspace = true
edition.workspace = true
description = "TICK game shell — the Bevy host: window / render / input + the FSM axes, driving the engine."

# The ONLY crate that depends on full Bevy. It hosts the deterministic `engine` core and pumps it;
# the engine never depends back on Bevy (the dependency arrow runs app → engine, one way).
[dependencies]
bevy.workspace = true
engine = { path = "../engine" }
